Change log for zeit.web
=======================

2.95 (unreleased)
-----------------

- ZON-1978: Hide regions, areas and modules


2.94.1 (2016-07-26)
-------------------

- HOTFIX: Do not return empty string for `fill_color` property in solr results


2.94 (2016-07-25)
-----------------

- BUG-421: Show fill_color for proxy content

- BUG-434: Use image variant `stripe` for article series banderole

- BUG-460: Fix unclickable video thumbnail and unstoppable video in video stage

- ZON-2863: Show tags in video pages

- ZON-3151: Implement Campus Embed Header

- ZON-3193: Show advertorial links in mobile navigation

- ZON-2691: Add header image alt attribute

- MAINT: Add infografix styles for ZEIT Campus


2.93.1 (2016-07-22)
-------------------

- BUG-468: Fix storystream teaser image


2.93 (2016-07-19)
-----------------

- BUG-453: Fix cardstacks in ZEIT Campus articles

- BUG-452: Don't show fallback images for storystream atoms

- BUG-445: Use teaser headline in teaser image link title

- BUG-464: Remove advertorial kicker mark in campus

- BUG-463: Fix broken banner_channel on campus centerpages

- BUG-461: Show table of contents before lists

- BUG-462: Add missing data attributes for storystream teaser

- ZON-1578: Show keywords in mobile navigation

- ZON-2734: Update header for series, topics and dynamic pages

- ZON-2864: Add keywords for ZMO articles and galleries

- FIX: Don't show kicker markup if there's no kicker

- MAINT: Move get_module from template to a higher abstraction level


2.92.1 (2016-07-13)
-------------------

- FIX: Fix release


2.92 (2016-07-12)
-----------------

- BUG-455: Add advertorial font size factor to inline gallery

- BUG-456: Fix rendering for full article view in advertorials

- BUG-454: Fix campus banner channel

- FIX: Add new fallback font for advertorials

- ZON-3170: Introduce automatic webtrekk testing

- ZON-2762: Refactor ZON navigation

- ZON-2966: Get liveblog status through ReSTful API
