@@ -6,6 +6,8 @@ Change log for zeit.web
 
 - ZON-1978: Hide regions, areas and modules
 
+- ZON-3171: Add target viewport (mobile / desktop) to image URLs
+
 
 2.94.1 (2016-07-26)
 -------------------
